add_executable(test-mf mf.c)
set_target_properties(test-mf PROPERTIES OUTPUT_NAME mf)
target_link_libraries(test-mf ${DEFAULT_NAME})
add_test(NAME test-mf COMMAND mf)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-mf+ mf.cpp)
  set_target_properties(test-mf+ PROPERTIES OUTPUT_NAME mf+)
  target_link_libraries(test-mf+ ${DEFAULT_NAME})
  add_test(NAME test-mf+ COMMAND mf+)
endif()

add_executable(test-pid pid.c)
set_target_properties(test-pid PROPERTIES OUTPUT_NAME pid)
target_link_libraries(test-pid ${DEFAULT_NAME})
add_test(NAME test-pid COMMAND pid)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-pid+ pid.cpp)
  set_target_properties(test-pid+ PROPERTIES OUTPUT_NAME pid+)
  target_link_libraries(test-pid+ ${DEFAULT_NAME})
  add_test(NAME test-pid+ COMMAND pid+)
endif()

add_executable(test-fpid fpid.c)
set_target_properties(test-fpid PROPERTIES OUTPUT_NAME fpid)
target_link_libraries(test-fpid ${DEFAULT_NAME})
add_test(NAME test-fpid COMMAND fpid)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-fpid+ fpid.cpp)
  set_target_properties(test-fpid+ PROPERTIES OUTPUT_NAME fpid+)
  target_link_libraries(test-fpid+ ${DEFAULT_NAME})
  add_test(NAME test-fpid+ COMMAND fpid+)
endif()

add_executable(test-fuzzy fuzzy.c)
set_target_properties(test-fuzzy PROPERTIES OUTPUT_NAME fuzzy)
target_link_libraries(test-fuzzy ${DEFAULT_NAME})
add_test(NAME test-fuzzy COMMAND fuzzy)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-fuzzy+ fuzzy.cpp)
  set_target_properties(test-fuzzy+ PROPERTIES OUTPUT_NAME fuzzy+)
  target_link_libraries(test-fuzzy+ ${DEFAULT_NAME})
  add_test(NAME test-fuzzy+ COMMAND fuzzy+)
endif()
