add_executable(test-lpf lpf.c)
set_target_properties(test-lpf PROPERTIES OUTPUT_NAME lpf)
target_link_libraries(test-lpf ${DEFAULT_NAME})
add_test(NAME test-lpf COMMAND $<TARGET_FILE:test-lpf>)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-lpf+ lpf.cpp)
  set_target_properties(test-lpf+ PROPERTIES OUTPUT_NAME lpf+)
  target_link_libraries(test-lpf+ ${DEFAULT_NAME})
  add_test(NAME test-lpf+ COMMAND $<TARGET_FILE:test-lpf+>)
endif()
