add_executable(test-math math.c)
set_target_properties(test-math PROPERTIES OUTPUT_NAME math)
target_link_libraries(test-math ${DEFAULT_NAME})
add_test(NAME test-math COMMAND $<TARGET_FILE:test-math>)

add_executable(test-mean mean.c)
set_target_properties(test-mean PROPERTIES OUTPUT_NAME mean)
target_link_libraries(test-mean ${DEFAULT_NAME})
add_test(NAME test-mean COMMAND $<TARGET_FILE:test-mean>)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-mean+ mean.cpp)
  set_target_properties(test-mean+ PROPERTIES OUTPUT_NAME mean+)
  target_link_libraries(test-mean+ ${DEFAULT_NAME})
  add_test(NAME test-mean+ COMMAND $<TARGET_FILE:test-mean+>)
endif()

add_executable(test-notefreqs notefreqs.c)
set_target_properties(test-notefreqs PROPERTIES OUTPUT_NAME notefreqs)
target_link_libraries(test-notefreqs ${DEFAULT_NAME})
add_test(NAME test-notefreqs COMMAND $<TARGET_FILE:test-notefreqs>)

add_executable(test-base base.c)
set_target_properties(test-base PROPERTIES OUTPUT_NAME base)
target_link_libraries(test-base ${DEFAULT_NAME})
add_test(NAME test-base COMMAND $<TARGET_FILE:test-base>)

add_executable(test-zyx zyx.c)
set_target_properties(test-zyx PROPERTIES OUTPUT_NAME zyx)
target_link_libraries(test-zyx ${DEFAULT_NAME})
add_test(NAME test-zyx COMMAND $<TARGET_FILE:test-zyx>)

if(CMAKE_CXX_COMPILER AND CXX IN_LIST enabled_languages)
  add_executable(test-zyx+ zyx.cpp)
  set_target_properties(test-zyx+ PROPERTIES OUTPUT_NAME zyx+)
  target_link_libraries(test-zyx+ ${DEFAULT_NAME})
  add_test(NAME test-zyx+ COMMAND $<TARGET_FILE:test-zyx+>)
endif()

add_executable(test-str str.c)
set_target_properties(test-str PROPERTIES OUTPUT_NAME str)
target_link_libraries(test-str ${DEFAULT_NAME})
add_test(NAME test-str COMMAND $<TARGET_FILE:test-str>)

add_executable(test-vec vec.c)
set_target_properties(test-vec PROPERTIES OUTPUT_NAME vec)
target_link_libraries(test-vec ${DEFAULT_NAME})
add_test(NAME test-vec COMMAND $<TARGET_FILE:test-vec>)

add_executable(test-list list.c)
set_target_properties(test-list PROPERTIES OUTPUT_NAME list)
target_link_libraries(test-list ${DEFAULT_NAME})
add_test(NAME test-list COMMAND $<TARGET_FILE:test-list>)

add_executable(test-slist slist.c)
set_target_properties(test-slist PROPERTIES OUTPUT_NAME slist)
target_link_libraries(test-slist ${DEFAULT_NAME})
add_test(NAME test-slist COMMAND $<TARGET_FILE:test-slist>)

add_executable(test-mempool mempool.c)
set_target_properties(test-mempool PROPERTIES OUTPUT_NAME mempool)
target_link_libraries(test-mempool ${DEFAULT_NAME})
add_test(NAME test-mempool COMMAND $<TARGET_FILE:test-mempool>)
